// Jest Snapshot v1, https://jestjs.io/docs/snapshot-testing

exports[`matches snapshot while loading 1`] = `
<div>
  <section
    class="relative min-h-screen flex items-center justify-center overflow-hidden pt-24 pb-8 hero-gradient-gold"
  >
    <div
      class="section-container relative z-10 w-full"
    >
      <div
        class="text-center mb-12 md:mb-16 hidden md:block"
      >
        <div
          class="relative inline-block mx-auto mb-6"
        >
          <div
            class="absolute inset-0 bg-gradient-radial from-yellow-200/40 via-yellow-100/20 to-transparent blur-3xl scale-110"
          />
          <img
            alt="Connect"
            class="relative w-auto h-48 mx-auto"
            src="/images/ConnectLogoBIG-Black.svg"
          />
        </div>
        <h1
          class="font-slogan text-3xl md:text-4xl lg:text-5xl text-brand-text tracking-wider uppercase mb-4"
        >
          Home of Beats on the Beltline
        </h1>
      </div>
      <div
        class="flex justify-center items-center py-12"
      >
        <svg
          aria-hidden="true"
          class="lucide lucide-loader-circle animate-spin text-brand-primary"
          fill="none"
          height="40"
          stroke="currentColor"
          stroke-linecap="round"
          stroke-linejoin="round"
          stroke-width="2"
          viewBox="0 0 24 24"
          width="40"
          xmlns="http://www.w3.org/2000/svg"
        >
          <path
            d="M21 12a9 9 0 1 1-6.219-8.56"
          />
        </svg>
      </div>
    </div>
  </section>
</div>
`;

exports[`matches snapshot with internal and external cards 1`] = `
<div>
  <section
    class="relative min-h-screen flex items-center justify-center overflow-hidden pt-24 pb-8 hero-gradient-gold"
  >
    <div
      class="section-container relative z-10 w-full"
    >
      <div
        class="text-center mb-12 md:mb-16 hidden md:block"
      >
        <div
          class="relative inline-block mx-auto mb-6"
        >
          <div
            class="absolute inset-0 bg-gradient-radial from-yellow-200/40 via-yellow-100/20 to-transparent blur-3xl scale-110"
          />
          <img
            alt="Connect"
            class="relative w-auto h-48 mx-auto"
            src="/images/ConnectLogoBIG-Black.svg"
          />
        </div>
        <h1
          class="font-slogan text-3xl md:text-4xl lg:text-5xl text-brand-text tracking-wider uppercase mb-4"
        >
          Home of Beats on the Beltline
        </h1>
      </div>
      <div
        class="flex flex-col md:flex-row md:justify-center md:flex-wrap gap-4 max-w-7xl mx-auto"
      >
        <a
          class="block h-full md:w-72"
          href="/events"
          style="animation: fadeInUp 0.6s ease-out 0s both;"
        >
          <div
            data-testid="hero-card"
          >
            Internal Card
          </div>
        </a>
        <a
          class="block h-full md:w-72"
          href="https://example.com"
          rel="noopener noreferrer"
          style="animation: fadeInUp 0.6s ease-out 0.15s both;"
          target="_blank"
        >
          <div
            data-testid="hero-card"
          >
            External Card
          </div>
        </a>
      </div>
    </div>
  </section>
</div>
`;

exports[`matches snapshot with no cards 1`] = `
<div>
  <section
    class="relative min-h-screen flex items-center justify-center overflow-hidden pt-24 pb-8 hero-gradient-gold"
  >
    <div
      class="section-container relative z-10 w-full"
    >
      <div
        class="text-center mb-12 md:mb-16 hidden md:block"
      >
        <div
          class="relative inline-block mx-auto mb-6"
        >
          <div
            class="absolute inset-0 bg-gradient-radial from-yellow-200/40 via-yellow-100/20 to-transparent blur-3xl scale-110"
          />
          <img
            alt="Connect"
            class="relative w-auto h-48 mx-auto"
            src="/images/ConnectLogoBIG-Black.svg"
          />
        </div>
        <h1
          class="font-slogan text-3xl md:text-4xl lg:text-5xl text-brand-text tracking-wider uppercase mb-4"
        >
          Home of Beats on the Beltline
        </h1>
      </div>
      <div
        class="flex flex-col md:flex-row md:justify-center md:flex-wrap gap-4 max-w-7xl mx-auto"
      />
    </div>
  </section>
</div>
`;
